<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="speed">Speed</string>
    <string name="startedKT">Started</string>
    <string name="stoppedKT">Stopped</string>
</resources>