<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".FirstFragment">
    <Button
        android:id="@+id/button_start_location_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_tracking"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/button_stop_location_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_tracking"
        app:layout_constraintTop_toBottomOf="@id/button_start_location_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textview_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/button_stop_location_scan"
        app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout
        android:id="@+id/layout_latitude"
        app:layout_constraintTop_toBottomOf="@id/textview_status"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview_latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/latitude" />
        <TextView
            android:id="@+id/textview_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_longitude"
        app:layout_constraintTop_toBottomOf="@id/layout_latitude"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview_longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/longitude" />
        <TextView
            android:id="@+id/textview_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_speed"
        app:layout_constraintTop_toBottomOf="@id/layout_longitude"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/speed" />
        <TextView
            android:id="@+id/textview_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_pedometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_speed">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="208dp"
            android:layout_height="179dp"
            android:layout_centerInParent="true"
            android:foregroundGravity="center"
            app:cpb_background_progressbar_color="#b6bbd8"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#3f51b5"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="true" />

        <TextView
            android:id="@+id/stepsTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--
The best way would be probably to use a database, and
get the date each time the user opens the app.
If it's a new date, then the count will start from 0,
else the counter will continue counting for the same day,
then you can store it in a database or something
-->